--- a/horaire.html
+++ b/horaire.html
@@ -21,24 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-25
-<br>
-à
-<br>
-jeu
-<br>
-29
-</td>
-<td> </td>
-<td class='ext'>
-Pas de messe
-<span class='addendum'>M. le curé absent</span>
-</td>
-</tr>
-<tr>
-<td>
 Ven
 <br>
 30
@@ -158,6 +140,24 @@ Lun
 </td>
 <td>15h00</td>
 <td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+11
+</td>
+<td class='modif'>14h00</td>
+<td>Messe à la résidence l’Îlot d’Or</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+12
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
 </tr>
 </table>
 </article>
