--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@ Webmestre :
 </p>
 </div>
 <article class='mg-a fit pad-1 w70' style='margin-top: 1.5em'>
-<p class='fnt-b'>Communiqué du bureau de presse du Saint-Siège ce jeudi 29 décembre en début d'après-midi :</p>
-<p>"Le Pape émérite a pu bien se reposer la nuit dernière, il est absolument lucide et alerte et aujourd'hui, bien que son état reste grave, la situation est pour le moment stable. Le Pape François renouvelle son invitation à prier pour lui et à l'accompagner en ces heures difficiles."</p>
+<p class='fnt-b'>Décès de Benoît XVI</p>
+<p>Le pape émérite Benoît XVI est retourné à la maison de son père. Il est mort samedi matin, le 31 décembre, dans sa résidence du monastère Mater Ecclesiae à l’âge de 95 ans.</p>
+<p>Lundi matin (2 janvier), la dépouille du pape émérite sera exposée en la basilique Saint Pierre de Rome afin que les fidèles puissent lui rendre un dernier adieu.</p>
 <figure class='mg-a'>
-<img class='smallphotoborder' src='fb-20221224.jpg' title='Benoît XV!'>
+<img class='smallphotoborder' src='fb-20221231.jpg' title='Benoît XV!'>
 <figcaption>Pape émérite Benoît XV!</figcaption>
 </figure>
 </article>
