--- a/horaire.html
+++ b/horaire.html
@@ -21,15 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Ven
-<br>
-30
-</td>
-<td>14h00</td>
-<td>Messe à La Maisonnée</td>
-</tr>
-<tr>
-<td>
 Sam
 <br>
 31
@@ -158,6 +149,15 @@ Jeu
 </td>
 <td>15h30</td>
 <td class='ext'>Messe à Barraute</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+13
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
 </tr>
 </table>
 </article>
