--- a/horaire.html
+++ b/horaire.html
@@ -21,29 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Sam
-<br>
-31
-</td>
-<td>
- 
-<br>
-16h00
-<br>
-20h00
-</td>
-<td>
-<strong>
-Veille du Jour de l’An
-</strong>
-<br>
-Messe à Senneterre
-<br>
-<span class='ext'>Messe à Barraute</span>
-</td>
-</tr>
-<tr>
-<td>
 Dim
 <br>
 1
@@ -157,6 +134,15 @@ Ven
 13
 </td>
 <td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Sam
+<br>
+14
+</td>
+<td>16h00</td>
 <td>Messe à Senneterre</td>
 </tr>
 </table>
