--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 31 décembre 2022
+: le 1er janvier 2023
 </p>
 <p class='txt-cent'>
 <br>
@@ -27,12 +27,12 @@ Webmestre :
 <button class='mg-a fit' onclick='mailto:csbelisle@yahoo.ca'>Christian Bélisle</button>
 </p>
 </div>
-<article class='mg-a fit pad-1 w70' style='margin-top: 1.5em'>
-<p class='fnt-b'>Décès de Benoît XVI</p>
+<article class='pad-1 mg-3' style='margin-top: 1.5em'>
+<titre>Décès de Benoît XVI</titre>
 <p>Le pape émérite Benoît XVI est retourné à la maison de son père. Il est mort samedi matin, le 31 décembre, dans sa résidence du monastère Mater Ecclesiae à l’âge de 95 ans.</p>
 <p>Lundi matin (2 janvier), la dépouille du pape émérite sera exposée en la basilique Saint Pierre de Rome afin que les fidèles puissent lui rendre un dernier adieu.</p>
 <figure class='mg-a'>
-<img class='smallphotoborder' src='fb-20221231.jpg' title='Benoît XV!'>
+<img class='smallphotoborder' src='fb-20230101.jpg' title='Benoît XV!'>
 <figcaption>Pape émérite Benoît XV!</figcaption>
 </figure>
 </article>
