--- a/annonces.html
+++ b/annonces.html
@@ -15,13 +15,13 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Annonces</div>
       </header>
-      <section><input id='is2' name='slider' type='radio'>
-<input checked id='is3' name='slider' type='radio'>
-<input id='is5' name='slider' type='radio'>
+      <section><input checked id='is5' name='slider' type='radio'>
+<input id='is2' name='slider' type='radio'>
+<input id='is3' name='slider' type='radio'>
 <nav class='sub'>
+<label class='is5' for='is5'>L’Équipe de la Joie (recrutement)</label>
 <label class='is2' for='is2'>Recrutement chorale St-Paul</label>
 <label class='is3' for='is3'>Bancs d'église à vendre</label>
-<label class='is5' for='is5'>L’Équipe de la Joie (recrutement)</label>
 <div class='slider'></div>
 </nav>
 <div class='sections'>
@@ -71,7 +71,7 @@ Faites vite, produit en demande !
       <div class="openButton"><span class="material-icons">double_arrow</span></div>
       <div class="topButton"><span class="material-icons">skip_previous</span></div>
       <my-navigation></my-navigation>
-      <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.14. <br />&copy; 2022 Christian Bélisle 🇨🇦️</p>
+      <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.14. <br />&copy; 2023 Christian Bélisle 🇨🇦️</p>
     </main>
   </body>
 </html>
