--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 1er janvier 2023
+: le 2 janvier 2023
 </p>
 <p class='txt-cent'>
 <br>
@@ -33,14 +33,13 @@ Webmestre :
 <p>Lundi matin (2 janvier), la dépouille du pape émérite sera exposée en la basilique Saint Pierre de Rome afin que les fidèles puissent lui rendre un dernier adieu.</p>
 <figure class='mg-a'>
 <img class='smallphotoborder' src='fb-20230101.jpg' title='Benoît XV!'>
-<figcaption>Pape émérite Benoît XV!</figcaption>
 </figure>
 </article>
 </section>
       <div class="openButton"><span class="material-icons">double_arrow</span></div>
       <div class="topButton"><span class="material-icons">skip_previous</span></div>
       <my-navigation></my-navigation>
-      <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.14. <br />&copy; 2022 Christian Bélisle 🇨🇦️</p>
+      <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.14. <br />&copy; 2023 Christian Bélisle 🇨🇦️</p>
     </main>
   </body>
 </html>
