--- a/horaire.html
+++ b/horaire.html
@@ -21,25 +21,6 @@
 <table cellspacing='0' id='horaire' summary='tableau'>
 <tr>
 <td>
-Dim
-<br>
-1
-</td>
-<td>
- 
-<br>
-10h30
-</td>
-<td>
-<strong>
-Jour de l’An
-</strong>
-<br>
-<span class='ext'>Messe à Lebel-sur-Quévillon</span>
-</td>
-</tr>
-<tr>
-<td>
 Lun
 <br>
 2
@@ -145,6 +126,15 @@ Sam
 <td>16h00</td>
 <td>Messe à Senneterre</td>
 </tr>
+<tr>
+<td>
+Dim
+<br>
+15
+</td>
+<td>10h30</td>
+<td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
 </table>
 </article>
 <p class='txt-cent' style='font-weight: normal; line-height: 175%'>
@@ -156,7 +146,7 @@ Pour plus de détails
       <div class="openButton"><span class="material-icons">double_arrow</span></div>
       <div class="topButton"><span class="material-icons">skip_previous</span></div>
       <my-navigation></my-navigation>
-      <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.14. <br />&copy; 2022 Christian Bélisle 🇨🇦️</p>
+      <p class="basdepage">Compilé avec <a href="https://nanoc.app">Nanoc</a> 4.12.14. <br />&copy; 2023 Christian Bélisle 🇨🇦️</p>
     </main>
   </body>
 </html>
