--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 4 janvier 2023
+: le 5 janvier 2023
 </p>
 <p class='txt-cent'>
 <br>
@@ -30,6 +30,7 @@ Webmestre :
 <article class='mg-a fit pad-1' style='margin-top: 1.5em'>
 <figure class='mg-a'>
 <img class='smallphotoborder' src='fb-20230101.jpg' title='Benoît XV!'>
+<button class='mg-a fit' onclick='location.href=&#39;https://www.youtube.com/watch?v=2ezCaqkXr8A&#39;'>Messe de funérailles de Benoît XVI</button>
 </figure>
 </article>
 </section>
