--- a/horaire.html
+++ b/horaire.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <meta content="width=device-width, initial-scale=0.6" name="viewport" />
+    <!--<meta content="width=device-width, initial-scale=0.6" name="viewport" />-->
     <link rel="stylesheet" href="styles.css" />
     <script src="modules.js" type="text/javascript"></script>
     <script defer src="psp6cjs.js" type="text/javascript"></script>
@@ -19,24 +19,6 @@
 <titre>Célébrations à venir</titre>
 <br>
 <table cellspacing='0' id='horaire' summary='tableau'>
-<tr>
-<td>
-Mer
-<br>
-4
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Jeu
-<br>
-5
-</td>
-<td>15h30</td>
-<td class='ext'>Messe à Barraute</td>
-</tr>
 <tr>
 <td>
 Ven
@@ -125,6 +107,33 @@ Dim
 </td>
 <td>10h30</td>
 <td class='ext'>Messe à Lebel-sur-Quévillon</td>
+</tr>
+<tr>
+<td>
+Lun
+<br>
+16
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+18
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+19
+</td>
+<td>15h30</td>
+<td class='ext'>Messe à Barraute</td>
 </tr>
 </table>
 </article>
