--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <meta content="width=device-width, initial-scale=0.6" name="viewport" />
+    <!--<meta content="width=device-width, initial-scale=0.6" name="viewport" />-->
     <link rel="stylesheet" href="styles.css" />
     <script src="modules.js" type="text/javascript"></script>
     <script defer src="psp6cjs.js" type="text/javascript"></script>
@@ -19,7 +19,7 @@
 <div class='fnt-b txt-cent fs-08 mg-a fit'>
 <p>
 <span class='fnt-u'>Dernière mise à jour</span>
-: le 5 janvier 2023
+: le 6 janvier 2023
 </p>
 <p class='txt-cent'>
 <br>
