--- a/sacrements.html
+++ b/sacrements.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <meta content="width=device-width, initial-scale=0.6" name="viewport" />
+    <!--<meta content="width=device-width, initial-scale=0.6" name="viewport" />-->
     <link rel="stylesheet" href="styles.css" />
     <script src="modules.js" type="text/javascript"></script>
     <script defer src="psp6cjs.js" type="text/javascript"></script>
@@ -234,7 +234,7 @@ Où ? : À la salle Saint-Paul, sous-sol de l’église.
 </p>
 <p>C’est pourquoi les futurs époux vivront une démarche de préparation à leur mariage. Ce sera pour eux l’occasion de faire le point sur leur vécu et de mieux comprendre les engagements qu’ils prendront l’un envers l’autre, devant Dieu et l’Église, au moment de la célébration religieuse.</p>
 <article>
-<p class='titre'>Démarches de préparation</p>
+<titre>Démarches de préparation</titre>
 <p>Les futurs époux prépareront leur mariage en vivant l’une ou l’autre des démarches suivantes, et ce en tenant compte de leurs disponibilités :</p>
 <div class='mg-l-2'>
 <p class='boxlight'>. Une fin de semaine intensive:</p>
