--- a/liens.html
+++ b/liens.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <meta content="width=device-width, initial-scale=0.6" name="viewport" />
+    <!--<meta content="width=device-width, initial-scale=0.6" name="viewport" />-->
     <link rel="stylesheet" href="styles.css" />
     <script src="modules.js" type="text/javascript"></script>
     <script defer src="psp6cjs.js" type="text/javascript"></script>
