--- a/nousrejoindre.html
+++ b/nousrejoindre.html
@@ -15,13 +15,7 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Pour nous rejoindre</div>
       </header>
-      <section><article class='full mg-5 mt-2 avertissement'>
-<titre>Congé des Fêtes</titre>
-<p>Veuillez prendre note que le secrétariat de la Fabrique sera fermé du <strong>22 décembre</strong> au <strong>9 janvier</strong>.</p>
-
-
-</article>
-<article class='full mg-5 mt-2' style='padding: 20px'>
+      <section><article class='full mg-5 mt-2' style='padding: 20px'>
 <p class='txt-cent fnt-b'>
 Paroisse Saint-Paul
 <br>
