--- a/annonces.html
+++ b/annonces.html
@@ -15,13 +15,13 @@
         <img src="images/entete.jpg" title="Photo de l’église prise par Mme Hélène Paré" />
         <div>Annonces</div>
       </header>
-      <section><input checked id='is5' name='slider' type='radio'>
+      <section><input checked id='is3' name='slider' type='radio'>
+<input id='is5' name='slider' type='radio'>
 <input id='is2' name='slider' type='radio'>
-<input id='is3' name='slider' type='radio'>
 <nav class='sub'>
+<label class='is3' for='is3'>Bancs d'église à vendre</label>
 <label class='is5' for='is5'>L’Équipe de la Joie (recrutement)</label>
 <label class='is2' for='is2'>Recrutement chorale St-Paul</label>
-<label class='is3' for='is3'>Bancs d'église à vendre</label>
 <div class='slider'></div>
 </nav>
 <div class='sections'>
@@ -40,15 +40,14 @@
 <p class='txt-cent'>
 Idéal pour projet ou pour décors
 <br>
-150$ petit / 250$ grand
-(rabais sur 2 et plus)
+100$ petit / 150$ grand
 </p>
 <p class='txt-cent'>
 Contactez Murielle au (819) 737-2045
 <br>
 (sur les heures de bureau (mar-jeu))
 <br>
-<a href='mailto:fabriquestpaul@yahoo.ca'>fabriquestpaul@yahoo.ca</a>
+<a href='mailto:Fabriquesenneterre@outlook.com'>Fabriquesenneterre@outlook.com</a>
 </p>
 <p class='txt-cent fnt-b'>
 Faites vite, produit en demande !
