--- a/20221212.html
+++ b/20221212.html
@@ -23,7 +23,7 @@
 <p><em>Que l’année 2023 vous apporte à tous :</em></p>
 
 
-<p class='gras txt-cent fnt-i' style='font-size: 2.5em'>
+<p class='gras txt-cent fnt-i' style='font-size: 2.5rem'>
 Santé !
 <br>
 Paix !
