--- a/20230109.html
+++ b/20230109.html
@@ -13,12 +13,12 @@
       Feuillet paroissial 9 au 22 janvier 2023
     </p>
     <div id='page1'>
-<div class='ombre-texte' style='font-size: 4rem'>L’avenir de l’église St-Paul de Senneterre</div>
-<p style='font-size: 2rem'>La situation financière de la Fabrique St-Paul est très difficile en ce moment.</p>
-<p style='font-size: 2rem; margin-block: 2rem'>Les coûts de chauffage ont doublé en un an. Les primes d’assurance ont augmenté de 60 %. La bonne nouvelle est que l’évêché d’Amos nous aidera pour les primes d’assurance.</p>
-<p style='font-size: 2rem'>Les prochains mois vont être critiques pour la survie de notre église. La sensibilisation des citoyens et des entreprises va être primordiale. Comme vous le savez, ce sont les dons de toutes sortes (capitation, quêtes, etc.) ainsi que le bénévolat qui font que notre église est viable depuis toujours.</p>
-<p class='txt-right' style='font-size: 2rem'>Bien à vous,</p>
-<p class='fnt-i txt-right' style='font-size: 2rem'>Le conseil de la Fabrique St-Paul</p>
+<div class='ombre-texte' style='font-size: 3em'>L’avenir de l’église St-Paul de Senneterre</div>
+<p style='font-size: 1.5em'>La situation financière de la Fabrique St-Paul est très difficile en ce moment.</p>
+<p style='font-size: 1.5em; margin-block: 1.25em'>Les coûts de chauffage ont doublé en un an. Les primes d’assurance ont augmenté de 60 %. La bonne nouvelle est que l’évêché d’Amos nous aidera pour les primes d’assurance.</p>
+<p style='font-size: 1.5em; margin-bottom: 1.25em'>Les prochains mois vont être critiques pour la survie de notre église. La sensibilisation des citoyens et des entreprises va être primordiale. Comme vous le savez, ce sont les dons de toutes sortes (capitation, quêtes, etc.) ainsi que le bénévolat qui font que notre église est viable depuis toujours.</p>
+<p class='txt-right' style='font-size: 1.5em'>Bien à vous,</p>
+<p class='fnt-i txt-right' style='font-size: 1.5em'>Le conseil de la Fabrique St-Paul</p>
 </div>
 <div id='page2'>
 <div class='ombre-texte'>Communier avec nos amis absents à la table eucharistique</div>
@@ -29,7 +29,7 @@
 <p>L’Eucharistie bâtit la communauté. Cependant, avant même que cet effet ne se produise, ce n’est jamais en tant que personne seule que le chrétien reçoit Jésus à la messe. En effet, l’homme ne se construit jamais à partir de rien. Il est le fils de toute une ascendance charnelle et spirituelle. Nous sommes constitués de toutes celles et de tous ceux qui nous ont précédés. C’est la raison pour laquelle nous pouvons, en nous avançant vers la table eucharistique, faire communier à travers nous (même si c’est sous une forme différente et amoindrie de la communion sacramentelle) les personnes qui nous sont chères et qui ne sont plus de ce monde : elles représentent une partie de nous-mêmes.</p>
 
 
-<p class='fs-08 txt-right'>Jean-Michel Castaing</p>
+<p class='fnt-i fs-09 txt-right'>Jean-Michel Castaing</p>
 <article>
 <h2>Capitation 2023</h2>
 <p>Afin de garder <strong><em>notre Église</em></strong> bien vivante, votre don est une façon de la conserver au niveau financier pour s’assurer un lieu de culte <strong><em>accueillant et sécuritaire</em></strong>.</p>
