--- a/horaire.html
+++ b/horaire.html
@@ -21,33 +21,6 @@
 <table cellspacing="0" id="horaire" summary="tableau">
 <tr>
 <td>
-Mer
-<br>
-18
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
-Jeu
-<br>
-19
-</td>
-<td>15h30</td>
-<td class="ext">Messe à Barraute</td>
-</tr>
-<tr>
-<td>
-Ven
-<br>
-20
-</td>
-<td>15h00</td>
-<td>Messe à Senneterre</td>
-</tr>
-<tr>
-<td>
 Sam
 <br>
 21
@@ -131,6 +104,41 @@ Dim
 Lun
 <br>
 30
+</td>
+<td>15h00</td>
+<td>Messe à Senneterre</td>
+</tr>
+<tr>
+<td>
+Mer
+<br>
+1
+</td>
+<td class="modif">14h00</td>
+<td>Messe à la résidence l’Îlot d’Or</td>
+</tr>
+<tr>
+<td>
+Jeu
+<br>
+2
+</td>
+<td>
+ 
+<br>
+15h30
+</td>
+<td>
+La Chandeleur
+<br>
+<span class="ext">Messe à Barraute</span>
+</td>
+</tr>
+<tr>
+<td>
+Ven
+<br>
+3
 </td>
 <td>15h00</td>
 <td>Messe à Senneterre</td>
