--- a/horaire.html
+++ b/horaire.html
@@ -1,1 +1,78 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><title>Horaire liturgique</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="index.8213ba58.css"><script src="index.2c48632f.js" defer></script></head><body><main><div class="w3-bar-block" id="mySidebar"><a class="w3-bar-item w3-button w3-hover-blue" href="annonces.html"> Annonces <div class="articles-count">5</div></a><a class="w3-bar-item w3-button w3-hover-blue" href="sacrements.html">Sacrements</a><a class="w3-bar-item w3-button w3-hover-blue" href="equipejoie.html">Équipe de la Joie</a><a class="w3-bar-item w3-button w3-hover-blue" href="feuillets.html">Feuillets paroissiaux</a><a class="w3-bar-item w3-button w3-hover-blue" href="historique.html">Historique</a><a class="w3-bar-item w3-button w3-hover-blue" href="horaire.html">Horaire liturgique</a><a class="w3-bar-item w3-button w3-hover-blue" href="contact.html">Nous rejoindre</a><a class="w3-bar-item w3-button w3-hover-blue" href="services.html">Services</a></div><div class="w3-overlay" id="myOverlay" onclick="w3_close()" style="cursor:pointer"></div><div><div class="margin-top w3-bar w3-border w3-border-blue-grey w3-round-xlarge" id="hero"><button class="w3-button w3-hover-blue w3-left w3-round-xlarge w3-xxlarge" id="hamburger" onclick="w3_open()">&#x2630;</button><a class="bold italic text-shadow w3-right w3-serif w3-text-blue w3-xxxlarge" style="padding-right:1.5rem;text-decoration:none" href="index.html">Paroisse St-Paul de Senneterre</a></div><div class="w3-container"><h1 id="pageTitle">Horaire liturgique</h1><div class="card margin-top-large w50"><h2>Célébrations à venir</h2><br><table id="horaire" cellspacing="0" summary="tableau"><tr><td>Ven<br>2</td><td>14h30<br>15h00</td><td>Adoration<br>Messe à Senneterre</td></tr><tr><td>Sam<br>3</td><td>16h00</td><td>Messe à Senneterre</td></tr><tr><td>Dim<br>4</td><td>9h30<br>11h00</td><td class="ext">Messe à La Morandière<br>Messe à Barraute</td></tr><tr><td>Lun<br>5</td><td>15h00</td><td>Messe à Senneterre</td></tr><tr><td>Mer<br>7</td><td>15h00</td><td>Messe à Senneterre</td></tr><tr><td>Jeu<br>8</td><td>15h30 </td><td class="ext">Messe à Barraute</td></tr><tr><td>Ven<br>9</td><td>15h00</td><td>Messe à Senneterre</td></tr><tr><td>Sam<br>10</td><td>16h00</td><td>Messe à Senneterre</td></tr><tr><td>Dim<br>11</td><td>10h30</td><td class="ext">Messe à Lebel-sur-Quévillon</td></tr></table></div></div></div></main></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Horaire liturgique</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.8213ba58.css" />
+    <script src="index.2c48632f.js" defer></script>
+  </head>
+  <body>
+    <main>
+      <div class="w3-bar-block" id="mySidebar">
+        <a class="w3-bar-item w3-button w3-hover-blue" href="annonces.html">
+          Annonces
+          <div class="articles-count">5</div></a
+        ><a class="w3-bar-item w3-button w3-hover-blue" href="sacrements.html">Sacrements</a><a class="w3-bar-item w3-button w3-hover-blue" href="equipejoie.html">Équipe de la Joie</a><a class="w3-bar-item w3-button w3-hover-blue" href="feuillets.html">Feuillets paroissiaux</a><a class="w3-bar-item w3-button w3-hover-blue" href="historique.html">Historique</a><a class="w3-bar-item w3-button w3-hover-blue" href="horaire.html">Horaire liturgique</a><a class="w3-bar-item w3-button w3-hover-blue" href="contact.html">Nous rejoindre</a><a class="w3-bar-item w3-button w3-hover-blue" href="services.html">Services</a>
+      </div>
+      <div class="w3-overlay" id="myOverlay" onclick="w3_close()" style="cursor: pointer"></div>
+      <div>
+        <div class="margin-top w3-bar w3-border w3-border-blue-grey w3-round-xlarge" id="hero"><button class="w3-button w3-hover-blue w3-left w3-round-xlarge w3-xxlarge" id="hamburger" onclick="w3_open()">&#x2630;</button><a class="bold italic text-shadow w3-right w3-serif w3-text-blue w3-xxxlarge" style="padding-right: 1.5rem; text-decoration: none" href="index.html">Paroisse St-Paul de Senneterre</a></div>
+        <div class="w3-container">
+          <h1 id="pageTitle">Horaire liturgique</h1>
+          <div class="card margin-top-large w50">
+            <h2>Célébrations à venir</h2>
+            <br />
+            <table id="horaire" cellspacing="0" summary="tableau">
+              <tr>
+                <td>Ven<br />2</td>
+                <td>14h30<br />15h00</td>
+                <td>Adoration<br />Messe à Senneterre</td>
+              </tr>
+              <tr>
+                <td>Sam<br />3</td>
+                <td>16h00</td>
+                <td>Messe à Senneterre</td>
+              </tr>
+              <tr>
+                <td>Dim<br />4</td>
+                <td>9h30<br />11h00</td>
+                <td class="ext">Messe à La Morandière<br />Messe à Barraute</td>
+              </tr>
+              <tr>
+                <td>Lun<br />5</td>
+                <td>15h00</td>
+                <td>Messe à Senneterre</td>
+              </tr>
+              <tr>
+                <td>Mer<br />7</td>
+                <td>15h00</td>
+                <td>Messe à Senneterre</td>
+              </tr>
+              <tr>
+                <td>Jeu<br />8</td>
+                <td>15h30</td>
+                <td class="ext">Messe à Barraute</td>
+              </tr>
+              <tr>
+                <td>Ven<br />9</td>
+                <td>15h00</td>
+                <td>Messe à Senneterre</td>
+              </tr>
+              <tr>
+                <td>Sam<br />10</td>
+                <td>16h00</td>
+                <td>Messe à Senneterre</td>
+              </tr>
+              <tr>
+                <td>Dim<br />11</td>
+                <td>10h30</td>
+                <td class="ext">Messe à Lebel-sur-Quévillon</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+</html>
